--- a/TabController/sample/src/main/AndroidManifest.xml
+++ b/TabController/sample/src/main/AndroidManifest.xml
@@ -8,12 +8,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".TabControllerActivity" android:label="@string/title_tab_controller">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".TabControllerFragmentActivity" android:label="@string/title_tab_controller_fragment">
+
         </activity>
     </application>
 
