--- a/TabController/tab-controller/build.gradle
+++ b/TabController/tab-controller/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
+
+    compile 'com.android.support:support-fragment:25.3.0'
     testCompile 'junit:junit:4.12'
 }
 
