--- a/TabController/sample/src/main/AndroidManifest.xml
+++ b/TabController/sample/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -16,10 +16,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TabControllerActivity"
+            android:name=".activity.TabControllerActivity"
             android:label="@string/title_tab_controller"/>
         <activity
-            android:name=".TabControllerFragmentActivity"
+            android:name=".activity.TabControllerFragmentActivity"
             android:label="@string/title_tab_controller_fragment"/>
     </application>
 
