--- a/TabController/tab-controller/build.gradle
+++ b/TabController/tab-controller/build.gradle
@@ -7,16 +7,16 @@ buildscript {
     }
 
     dependencies {
-        classpath "me.tatarka:gradle-retrolambda:3.4.0"
-        classpath 'com.novoda:bintray-release:0.4.0'
+        classpath 'com.novoda:bintray-release:0.9.1'
     }
 
 }
 
-apply plugin: 'me.tatarka.retrolambda'
-
-
 android {
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
     lintOptions {
         abortOnError false
     }
@@ -25,14 +25,13 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode 4
-        versionName "1.0.3"
+        versionName "1.1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -46,20 +45,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:support-fragment:25.3.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'androidx.fragment:fragment:1.0.0'
+    testImplementation 'junit:junit:4.12'
 }
 
 publish {
     userOrg = 'appolica-ltd'
     groupId = 'com.appolica'
     artifactId = 'tab-controller'
-    publishVersion = '1.0.3'
+    publishVersion = '1.1.0'
     desc = 'A helper library for managing fragments in a certain way.'
     website = 'https://github.com/Appolica/TabControllerAndroid'
     licences = ['Apache-2.0']
